--- a/assets/place-app/partials/index.html
+++ b/assets/place-app/partials/index.html
@@ -1,12 +1,7 @@
-{{hello}}
-
-<br>
-
-<a ui-sref="index.substate">Click here to load substate below:</a>
-
-<!-- Child UI Views will load here -->
-<div class="well" ui-view></div>
-
-
-Here's a popover from <code>ui.bootstrap</code>:
-<button popover="I appeared on mouse enter!" popover-trigger="mouseenter" type="button" class="btn btn-default">Mouseenter</button>
+<md-list-item class="md-3-line" ng-repeat="post in posts">
+    <div class="md-list-item-text" layout="column">
+        <h3><a href="{{post.ID}}">{{post.title.rendered}}</a></h3>
+        <p>{{post.content.rendered}}</p>
+        <md-divider ></md-divider>
+    </div>
+</md-list-item>
